welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: ')' expected but '(' found.
			setPos(x:(getX()+1),y:(getY()+getMondeHauteur()-1))
                                      ^ColumnByColumn:14: error: identifier expected but integer literal found.
			setPos(x:(getX()+1),y:(getY()+getMondeHauteur()-1))
                                         ^ColumnByColumn:15: error: ')' expected but '}' found.
		}
                ^